# doc2md

./: .gitignore  CLAUDE.md  CONVENTIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: CLAUDE.md  README.md  __init__.py  settings.py
data/: CLAUDE.md  README.md
docs/: CLAUDE.md  end-goal.md  roadmap.md
docs/design/: image-captioning.md  ooxml-lane.md  output-contract.md
evals/: CLAUDE.md  README.md  expectations.json  gen_corpus.py  run_eval.py
scripts/: CLAUDE.md  README.md  build_bundle.py  build_pdf_bundle.py  caption_bundles.py  docling_convert.py  heal_supervisor.py  image_caption.py  image_enrich.py  office_convert.py  prefetch_docling_models.py  setup_libreoffice.py  text_convert.py  validate_figures.py  validate_markdown.py  vlm_client.py
src/: CLAUDE.md
src/backend/: CLAUDE.md  __init__.py
src/backend/bundle/: CLAUDE.md  README.md  __init__.py  _assemble.py
src/backend/ingest/: CLAUDE.md  README.md  __init__.py  _config.py  _coverage.py  _figures.py  _ids.py  _imageprobe.py  _markdown.py  _media.py  _ooxml_md.py  _provenance.py  _rawvocab.py  _recovery.py  (+2 more)
tests/: CLAUDE.md  conftest.py
tests/e2e/: test_docling_convert_e2e.py  test_eval_corpus.py  test_heal_supervisor_e2e.py
tests/integration/: test_build_bundle.py  test_build_pdf_bundle.py  test_caption_bundles.py  test_coverage_flow.py  test_docling_caption_helpers.py  test_docling_caption_pipeline.py  test_docling_real.py  test_heal_orchestration.py  test_image_enrich.py  test_ingest_pipeline.py  test_office_convert.py  test_text_convert.py  test_validate_figures.py
tests/unit/: test_config_settings.py
(+30 files in other folders)
